[package]
name = "pallet-liberland-legislation"
version = "0.1.0"
description = "Liberland legislation pallet."
authors = ["Dorian Jakov Stern Vukotic"]
homepage = "https://liberland.org"
edition = "2021"
license = "MIT"
repository = "https://github.com/substrate-developer-hub/substrate-node-template/"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
	"derive",
] }
log = { version = "0.4.14", default-features = false }
scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }
sp-keyring = { default-features = false, optional = true, branch = "release-polkadot-v1.1.0", git = "https://github.com/paritytech/polkadot-sdk" }
sp-core = { default-features = false, branch = "release-polkadot-v1.1.0", git = "https://github.com/paritytech/polkadot-sdk" }
frame-benchmarking =  { branch = "release-polkadot-v1.1.0", git = "https://github.com/paritytech/polkadot-sdk", default-features = false, optional = true }
frame-support = { default-features = false, branch = "release-polkadot-v1.1.0", git = "https://github.com/paritytech/polkadot-sdk" }
frame-system = { default-features = false, branch = "release-polkadot-v1.1.0", git = "https://github.com/paritytech/polkadot-sdk" }
sp-std = { default-features = false, branch = "release-polkadot-v1.1.0", git = "https://github.com/paritytech/polkadot-sdk" }
sp-io = { default-features = false, branch = "release-polkadot-v1.1.0", git = "https://github.com/paritytech/polkadot-sdk" }
sp-runtime = { default-features = false, branch = "release-polkadot-v1.1.0", git = "https://github.com/paritytech/polkadot-sdk" }
pallet-llm = { default-features = false, path = "../llm" }
liberland-traits = { path = "../liberland-traits", default-features = false}

[dev-dependencies]
pallet-balances = { branch = "release-polkadot-v1.1.0", git = "https://github.com/paritytech/polkadot-sdk" }
pallet-assets = { path = "../assets" }
pallet-scheduler = { branch = "release-polkadot-v1.1.0", git = "https://github.com/paritytech/polkadot-sdk" }
pallet-liberland-initializer = { path = "../liberland-initializer" }
pallet-democracy = { path = "../democracy" }
pallet-nfts = { path = "../nfts" }
pallet-identity = { path = "../identity" }
pallet-asset-conversion = { branch = "release-polkadot-v1.1.0", git = "https://github.com/paritytech/polkadot-sdk" }

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"frame-support/std",
	"frame-system/std",
	"frame-benchmarking?/std",
	"pallet-llm/std",
	"pallet-democracy/std",
	"pallet-nfts/std",
	"pallet-asset-conversion/std",
	"log/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	"liberland-traits/std",
]

runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"pallet-assets/runtime-benchmarks",
	"pallet-asset-conversion/runtime-benchmarks",
	"pallet-llm/runtime-benchmarks",
	"pallet-liberland-initializer/runtime-benchmarks",
	"liberland-traits/runtime-benchmarks",
	"pallet-nfts/runtime-benchmarks",
	"pallet-democracy/runtime-benchmarks",
]
try-runtime = [
	"frame-support/try-runtime",
	"pallet-llm/try-runtime",
]
